// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Profile/components/AwardList when props.editMode is false when sorting by date renders correctly 1`] = `
<section
  className="profile-experience-wrapper"
>
  <p
    className="profile-block-title"
  >
    Awards
  </p>
  <div>
    <div>
      <div
        className="profile-experience-block profile-unverified-status"
      >
        <div>
          <div
            className="relative"
          >
            <div
              className="Avatar Avatar-white Avatar-size-109"
            >
              <img
                alt="logo"
                src="appii-placeholder.png"
              />
            </div>
            <p
              className="visible-xs visible-sm"
            >
              <i
                className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark"
                data-tooltip="Not verified"
              >
                 
              </i>
            </p>
          </div>
          <div
            className="profile-experience-info"
          >
            <i
              className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark hidden-xs hidden-sm"
              data-tooltip="Not verified"
            >
               
            </i>
            <p>
              Award 1
            </p>
            <span>
              Applied Blockchain
            </span>
            <em>
              11/2017
            </em>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="profile-experience-block profile-verified-status"
      >
        <div>
          <div
            className="relative"
          >
            <div
              className="Avatar Avatar-white Avatar-size-109"
            >
              <img
                alt="logo"
                src="appii-placeholder.png"
              />
            </div>
            <p
              className="visible-xs visible-sm"
            >
              <i
                className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success"
                data-tooltip="Verified"
              >
                 
              </i>
            </p>
          </div>
          <div
            className="profile-experience-info"
          >
            <i
              className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success hidden-xs hidden-sm"
              data-tooltip="Verified"
            >
               
            </i>
            <p>
              Award 2
            </p>
            <span>
              Apple Inc
            </span>
            <em>
              10/2017
            </em>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`containers/Profile/components/AwardList when props.editMode is false when sorting by date_to renders correctly 1`] = `
<section
  className="profile-experience-wrapper"
>
  <p
    className="profile-block-title"
  >
    Certificates
  </p>
  <div>
    <div>
      <div
        className="profile-experience-block profile-unverified-status"
      >
        <div>
          <div
            className="relative"
          >
            <div
              className="Avatar Avatar-white Avatar-size-109"
            >
              <img
                alt="logo"
                src="appii-placeholder.png"
              />
            </div>
            <p
              className="visible-xs visible-sm"
            >
              <i
                className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark"
                data-tooltip="Not verified"
              >
                 
              </i>
            </p>
          </div>
          <div
            className="profile-experience-info"
          >
            <i
              className="profile-status-ico tooltip-position-top tooltip-movable tooltip-dark hidden-xs hidden-sm"
              data-tooltip="Not verified"
            >
               
            </i>
            <p>
              Certified Dev
            </p>
            <span>
              Apple Inc
            </span>
            <em>
              09/2017 – 11/2017
            </em>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="profile-experience-block profile-verified-status"
      >
        <div>
          <div
            className="relative"
          >
            <div
              className="Avatar Avatar-white Avatar-size-109"
            >
              <img
                alt="logo"
                src="appii-placeholder.png"
              />
            </div>
            <p
              className="visible-xs visible-sm"
            >
              <i
                className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success"
                data-tooltip="Verified"
              >
                 
              </i>
            </p>
          </div>
          <div
            className="profile-experience-info"
          >
            <i
              className="profile-status-ico tooltip-position-top tooltip-movable tooltip-success hidden-xs hidden-sm"
              data-tooltip="Verified"
            >
               
            </i>
            <p>
              Certificate 2
            </p>
            <span>
              Applied Blockchain
            </span>
            <em>
              06/2017 – 08/2017
            </em>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`containers/Profile/components/AwardList when props.editMode is false when sorting by proficiency renders correctly 1`] = `
<section
  className="profile-experience-wrapper"
>
  <p
    className="profile-block-title"
  >
    Languages
  </p>
  <div>
    <div>
      <div
        className="profile-experience-block profile-verified-status"
      >
        <div
          className="profile-experience-info"
        >
          <p>
            French
          </p>
          <span>
            Advanced - High (B2)
          </span>
          <div
            className="ProgressBar"
          >
            <div
              className="progress"
              style={
                Object {
                  "width": "81.81818181818183%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="profile-experience-block profile-verified-status"
      >
        <div
          className="profile-experience-info"
        >
          <p>
            Dutch
          </p>
          <span>
            Intermediate - Low (A2)
          </span>
          <div
            className="ProgressBar"
          >
            <div
              className="progress"
              style={
                Object {
                  "width": "36.36363636363637%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="profile-experience-block profile-unverified-status"
      >
        <div
          className="profile-experience-info"
        >
          <p>
            Portuguese
          </p>
          <span>
            Novice - Mid (A1)
          </span>
          <div
            className="ProgressBar"
          >
            <div
              className="progress"
              style={
                Object {
                  "width": "18.181818181818183%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`containers/Profile/components/AwardList when props.editMode is true renders correctly 1`] = `
<section
  className="profile-experience-wrapper"
>
  <div
    className="profile-experience-block-btns"
  >
    <button
      className="reorder-btn"
      onClick={[Function]}
    >
       
    </button>
    <button
      className="add-btn"
      onClick={[Function]}
    >
       
    </button>
  </div>
  <p
    className="profile-block-title"
  >
    Languages
  </p>
  <div>
    <div>
      <div
        className="profile-experience-block profile-verified-status"
      >
        <div
          className="profile-experience-btns"
        >
          <button
            className="edit-btn"
            onClick={[Function]}
          >
             
          </button>
        </div>
        <div
          className="profile-experience-info"
        >
          <p>
            French
          </p>
          <span>
            Advanced - High (B2)
          </span>
          <div
            className="ProgressBar"
          >
            <div
              className="progress"
              style={
                Object {
                  "width": "81.81818181818183%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="profile-experience-block profile-verified-status"
      >
        <div
          className="profile-experience-btns"
        >
          <button
            className="edit-btn"
            onClick={[Function]}
          >
             
          </button>
        </div>
        <div
          className="profile-experience-info"
        >
          <p>
            Dutch
          </p>
          <span>
            Intermediate - Low (A2)
          </span>
          <div
            className="ProgressBar"
          >
            <div
              className="progress"
              style={
                Object {
                  "width": "36.36363636363637%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="profile-experience-block profile-unverified-status"
      >
        <div
          className="profile-experience-btns"
        >
          <button
            className="edit-btn"
            onClick={[Function]}
          >
             
          </button>
        </div>
        <div
          className="profile-experience-info"
        >
          <p>
            Portuguese
          </p>
          <span>
            Novice - Mid (A1)
          </span>
          <div
            className="ProgressBar"
          >
            <div
              className="progress"
              style={
                Object {
                  "width": "18.181818181818183%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;
